--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
  
     <div class="footer">
-        @2023 MY WEBSITE ALL RIGHTS RESERVERD.
+        @2023 MY WEBSITE ALL RIGHTS RESERVERD
     </div>
 </body>
 </html>
