--- a/home.html
+++ b/home.html
@@ -82,6 +82,6 @@ function fun(str1){
     <div id="re2">
             <button id="reset"  onclick="rest()">RESTART</button>
    </div>
-   
+   &copy; 2023 MY WEBSITE ALL RIGHTS RESERVERD
 </body>
 </html>
