--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
 
 
     <div class="footer">
-        @2023 MY WEBSITE ALL RIGHTS RESERVERD
+        &copy; MY WEBSITE ALL RIGHTS RESERVERD
     </div>
 </body>
 </html>
