--- a/skills.html
+++ b/skills.html
@@ -57,7 +57,7 @@
     </fieldset>
 
     <div class="footer">
-        @2023 MY WEBSITE ALL RIGHTS RESERVERD
+        &copy; 2023 MY WEBSITE ALL RIGHTS RESERVERD
     </div>
 </body>
 </html>
