--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     </fieldset>
 
     <div class="footer">
-        @2023 MY WEBSITE ALL RIGHTS RESERVERD
+       &copy; MY WEBSITE ALL RIGHTS RESERVERD
     </div>
 </body>
 </html>
