--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     </fieldset>
 
     <div class="footer">
-        @2023 MY WEBSITE ALL RIGHTS RESERVERD
+        &copy; MY WEBSITE ALL RIGHTS RESERVERD
     </div>
 </body>
 </html>
